Fix: Colors invisible in Simple messages mode

--- a/src/views/Chat/ChatWindowSimple/styles.styl
+++ b/src/views/Chat/ChatWindowSimple/styles.styl
@@ -50,8 +50,8 @@
 
     .messageActions {
         padding: 5px;
-        // visibility: hidden;
 
+        // visibility: hidden;
         .addReactionBtn svg {
             height: 18px;
             width: 100%;
@@ -65,7 +65,7 @@
     }
 
     .msg:hover .messageActions {
-    //    visibility: visible;
+        // visibility: visible;
     }
 
     .link-preview-parent {
@@ -104,6 +104,7 @@
 
     .me a {
         text-decoration: underline;
+        color: inherit;
     }
 
     :not(.reply).sub, :not(.reply).sub.last {
